--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
 glib = "0.21.5"
 oneshot = "0.1.11"
 url = "2.5.8"
+url-escape = "0.1.1"
 
 [build-dependencies]
 pkg-config = "0.3.32"
