Update version to 0.0.1, add AppImage build script, and include AppStream metadata

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,4 @@ Cargo.lock
 *.pdb
 
 # End of https://www.toptal.com/developers/gitignore/api/rust,linux,macos,jetbrains+all,clion,flatpak
+libs/
